# db_assistant

./: README.md  pyproject.toml
src/database_assistant/: crew.py  gradio_app.py  main.py
src/database_assistant/config/: agents.yaml  tasks.yaml
src/database_assistant/tools/: postgres_schema_tool.py  postgres_sql_executor.py
