[project]
name = "database_assistant"
version = "0.1.0"
description = "database_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "psycopg2",
    "pydantic",
    "groq",
    "gradio"
]

[project.scripts]
database_assistant = "database_assistant.main:run"
run_crew = "database_assistant.main:run"
train = "database_assistant.main:train"
replay = "database_assistant.main:replay"
test = "database_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
